<resources>
    <string name="app_name">Mekus_Mekus</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">SIGNUP</string>
    <string name="logout">Logout</string>
    <string name="Click_to_Login">Click to Log In</string>
    <string name="Click_to_Register">Click to Register</string>
    />
</resources>